<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abrir_servidor">Abrir Servidor</string>
    <string name="conectar">Conectar</string>
    <string name="id_jogador">Identificador do jogador</string>
    <string name="endereco_ou_ip">Endereço ou IP (vazio para automático)</string>
    <string name="usar_mapeamento_sombras">Usar mapeamento de sombras</string>
    <string name="desativar_som">Desativar som</string>
    <string name="escala_fonte">Escala de fonte</string>
    <string name="app_name">Tabuleiro</string>
    <string name="max_pontos_vida">Max Pontos Vida</string>
    <string name="pontos_vida">Pontos Vida</string>
    <string name="rotulo">Rótulo</string>
    <string name="rotulos_especiais">Rótulos Especiais</string>
    <string name="tipo_visao">Tipo de Visão</string>
    <string name="metros_m">m</string>
    <string name="raio_luz">Raio da Luz</string>
    <string name="salvar">Salvar</string>
    <string name="abrir">Abrir</string>
    <string-array name="tipo_visao_array">
      <!-- A ordem deve ser a mesma da enum de visoes. -->
      <item>Visão Normal</item>
      <item>Visão na Penumbra</item>
      <item>Visão no Escuro</item>
    </string-array>
  </resources>
